find_package(PythonInterp)

if (WIN32)
	install(FILES Psycollider.py
		DESTINATION "SuperCollider"
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
	install(FILES keywords.list
		DESTINATION "SuperCollider"
		PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)

elseif (CMAKE_SYSTEM_NAME MATCHES "Linux")
	install(FILES Psycollider.py
		DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
	)
endif()
